--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,10 @@ input.active {color: green;}
 .point.selected {background-color: orange; box-shadow: 0px 0px 5px orange;}
 
 .line {width: 30000px; background-color: red; z-index: 4;}
+.line.hover {background-color: green; box-shadow: 0px 0px 2px green;}
 
 .circle {border-radius: 10000px; border: 1px solid black; z-index: 3;}
+.circle.hover {border-color: green; box-shadow: 0px 0px 3px green;}
 
 
 
